--- a/style.css
+++ b/style.css
@@ -15,3 +15,101 @@ Mobil   0 - 539px
 Tablet  540px - 959px (čti jako 540px a víc)
 PC      960px a víc
 */
+
+body {
+	text-align: center;
+	margin: 0px;
+}
+
+img {
+	border-radius: 50%;
+	margin-top: 20px;
+	width: 140px;
+	height: 140px;
+	margin-bottom: 20px;
+}
+
+.card {
+	border-color: rgb(231, 231, 215);
+	border-width: 1px;
+	border-style: solid;
+	border-radius: 10px;
+	max-width: 540px;
+	margin: 10px;
+	margin-bottom: 20px;
+	box-shadow:rgb(206, 250, 246) 0px 2px;
+}
+
+p {
+	padding: 0 20px 20px 20px;
+	margin:0;
+}
+
+h2 {
+	margin-top: 0;
+	padding-right: 20px;
+}
+
+
+@media screen and (min-width: 540px) {
+	
+	.card {
+		display: flex;
+		min-width: calc((100% - 40px) / 2);
+		max-width: calc((100% - 40px) / 2);
+	}
+
+	.text {
+		text-align: left;
+	}
+
+	.cards {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	p {
+		padding-left: 0px;
+	}
+
+	h2 {
+		padding-top: 20px;
+	}
+
+	img {
+		margin: 20px;
+		width: 95px;
+		height: 95px;
+	}
+
+}
+
+
+
+@media screen and (min-width: 960px) {
+
+	.text {
+		text-align: center;
+	}
+
+	.card {
+		min-width: calc((100% - 80px) / 4);
+		max-width: calc((100% - 80px) / 4);
+		display: inline;
+	}
+
+	p {
+		padding-left: 20px;
+		padding-bottom: 20px;
+	}
+
+	h2 {
+		padding: 0;
+	}
+
+	img {
+		width: 140px;
+		height: 140px;
+	}
+
+}
